@startuml

title __SERVER's Class Diagram__\n

  package ifmo.programming.lab7 {
    package ifmo.programming.lab7.server {
      class FileLoader {
          {static} + getFileContent()
      }
    }
  }
  

  package ifmo.programming.lab7 {
    package ifmo.programming.lab7.server {
      class JSONParse {
          {static} ~ getRoomsFromJSON()
      }
    }
  }
  

  package ifmo.programming.lab7 {
    package ifmo.programming.lab7.server {
      class RegisterHelper {
          {static} - PASSWORD_SALT : byte[]
          {static} ~ AB : String
          {static} ~ rnd : SecureRandom
          {static} ~ hashPassword()
          {static} ~ randomString()
      }
    }
  }
  

  package ifmo.programming.lab7 {
    package ifmo.programming.lab7.server {
      class Resolver {
          - requestID : int
          {static} - address : InetAddress
          ~ Resolver()
          + run()
          {static} ~ resolve()
          {static} - respond()
          {static} - m()
          {static} - m()
      }
    }
  }
  

  package ifmo.programming.lab7 {
    package ifmo.programming.lab7.server {
      class RoomDatabaseInteractor {
          {static} ~ makeImport()
          {static} ~ addRoom()
          {static} ~ removeRoom()
          {static} ~ removeGreaterThanRoom()
          {static} ~ removeFirstRoom()
          {static} ~ makeShow()
          {static} ~ getInfo()
          {static} ~ getHelp()
      }
    }
  }
  

  package ifmo.programming.lab7 {
    package ifmo.programming.lab7.server {
      class Server {
          {static} - config : ServerConfig
          {static} - connection : Connection
          {static} - mailSession : Session
          {static} + main()
          {static} - processRequest()
          {static} - generateListener()
          {static} - sendDown()
          {static} - initConfig()
          {static} - initDatabaseConnection()
          {static} - initTables()
          {static} - initEmail()
          {static} ~ sendMail()
          {static} + getConfig()
          {static} + getConnection()
      }
    }
  }
  

  package ifmo.programming.lab7 {
    package ifmo.programming.lab7.server {
      class ServerConfig {
          - port : int
          - databaseHost : String
          - databasePort : int
          - databaseName : String
          - databaseUser : String
          - databasePassword : String
          - jdbcDriver : String
          - jdbcLangProtocol : String
          - smtpHost : String
          - smtpPort : int
          - smtpSSLEnabled : boolean
          - mailUsername : String
          - mailPassword : String
          - emailFrom : String
          + ServerConfig()
          {static} ~ fromFile()
          + getPort()
          + setPort()
          + getDatabaseHost()
          + setDatabaseHost()
          + getDatabasePort()
          + setDatabasePort()
          + getDatabaseName()
          + setDatabaseName()
          + getDatabaseUser()
          + setDatabaseUser()
          + getDatabasePassword()
          + setDatabasePassword()
          + getJdbcDriver()
          + setJdbcDriver()
          + getJdbcLangProtocol()
          + setJdbcLangProtocol()
          + getSmtpHost()
          + setSmtpHost()
          + getSmtpPort()
          + setSmtpPort()
          + isSmtpSSLEnabled()
          + setSmtpSSLEnabled()
          + getMailUsername()
          + setMailUsername()
          + getMailPassword()
          + setMailPassword()
          + getEmailFrom()
          + setEmailFrom()
      }
    }
  }
  

  package ifmo.programming.lab7 {
    package ifmo.programming.lab7.server {
      class UsersDatabaseInteractor {
          {static} ~ register()
          {static} ~ login()
      }
    }
  }
  

  Resolver -up-|> Runnable
  Resolver o-- Message : message


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
